--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
       <span class="brand">I'm a <sup> . </sup></span>
       <span id="demo"></span>
       <span id='typewriter' class='type-cursor'>|</span>
-      <p>Originally from Turkey, currently in Bali. A former accountant who jumped into coding. Completed 9 week intense coding bootcamp to join the club.   </p>
+      <p>A former accountant who jumped into coding. Completed nine-weeks coding bootcamp to join the club.</p>
+      
+      <p>One year ago, I made a decision to chase my passions rather than a well-paid job. I quit my job to pursue software engineering.
+      I am hugely proud to announce that it was the best decision in my life.</p>
     </div>
     <h2 class="mb-5">Technology - I have most experience with:</h2>
       <ul>
-        <li class="skill-list"><strong>BackEnd:</strong> Ruby(on Rails), Javascript ES6</li>
+        <li class="skill-list"><strong>BackEnd:</strong> Ruby(on Rails), Javascript</li>
         <li class="skill-list"><strong>FrontEnd:</strong> HTML, CSS, Bootstrap</li>
         <li class="skill-list"><strong>Database:</strong> PostgreSQL</li>
         <li class="skill-list"><strong>Currently Learning:</strong> React</li>
