mini project info addition

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 <body>
   <section>
   <div class="container">
+    <div class="sub-container">
     <div class="head-info caption">
     <h1 id="hi-title">MELIKE GUNDOGDU</h1>
       <span class="brand">I'm a <sup> . </sup></span>
       <span id="demo"></span>
       <span id='typewriter' class='type-cursor'>|</span>
       <p>A former accountant who jumped into coding. Completed nine-weeks coding bootcamp to join the club.</p>
-      
+
       <p>One year ago, I made a decision to chase my passions rather than a well-paid job. I quit my job to pursue software engineering.
       I am hugely proud to announce that it was the best decision in my life.</p>
     </div>
@@ -117,7 +118,13 @@
             </button>
           </div>
         </div>
+        <div class="mini-projects">
+          <h2 class="mb-5 mt-5">Mini Projects - I did for fun:</h2>
+            <p class="mini-project">Simple Editor:</p><p>A simple text editor that you can click to make the text bold, italic or underline</p>
+            <p class="mini-project">My Beatbox:</p><p>Play nine beats I picked for you!</p>
+        </div>
       </div>
+    </div>
   </div>
     </section>
     <div class="footer">
@@ -126,6 +133,9 @@
         <a href="https://github.com/melormelike" class="fab fa-fw fa-github" target="_blank"></a>
         <p class="last-word">Designed by Melike Gundogdu</p>
       </div>
+    </div>
+    <div class="date">
+      <p>Last updated Saturday, Jun 24, 2022</p>
     </div>
 
   </body>
