--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     </div>
     <h2 class="mb-5">Technology - I have most experience with:</h2>
       <ul>
-        <li class="skill-list"><strong>BackEnd:</strong> Ruby(on Rails), Javascript</li>
-        <li class="skill-list"><strong>FrontEnd:</strong> HTML, CSS, Bootstrap</li>
+        <li class="skill-list"><strong>BackEnd:</strong> Ruby on Rails, Javascript</li>
+        <li class="skill-list"><strong>FrontEnd:</strong> Ember.js, HTML, CSS, Bootstrap</li>
         <li class="skill-list"><strong>Database:</strong> PostgreSQL</li>
-        <li class="skill-list"><strong>Currently Learning:</strong> React</li>
+        <li class="skill-list"><strong>Currently Learning:</strong> Pyhton</li>
       </ul>
       <h2 class="mb-5 mt-5">Projects - I worked on a team to build:</h2>
       <div class="project-1">
-        <h3 class="project-links">Safeblok <a href= "https://www.safeblokbali.com/" target="_blank">(www.safeblokbali.com)</a></h3>
+        <h3 class="project-links">Safeblok</h3>
         <p>It is a web app for foreigners living in Bali, who want to report harmful incidents by marking them on a map.</p>
         <p>Tech used: Ruby on Rails, HTML&CSS, Javascript, Bootstrap, Mapbox geocoded map, Heroku</p>
         <div class="card mb-5 mt-5">
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="project-2">
-        <h3 class="project-links">Active Potato <a href= "https://www.active-potato.com/" target="_blank">(www.active-potato.com)</a></h3>
+        <h3 class="project-links">Active Potato</h3>
         <p>It is a mobile-first web app for sport enthusiast, who wish to find the nearest group activity in seconds.</p>
         <p>Tech used: Ruby on Rails, HTML&CSS, Stimulus JS, Bootstrap, live chat with Action Cable, Mapbox geocoded map, Heroku</p>
         <div class="card mb-5 mt-5">
@@ -135,7 +135,7 @@
       </div>
     </div>
     <div class="date">
-      <p>Last updated Saturday, Jun 24, 2022</p>
+      <p>Last updated Saturday, May 20, 2023</p>
     </div>
 
   </body>
